arrow in collapse fix

--- a/src/css/toy-card-fullpage/_toy-card-fullpage.scss
+++ b/src/css/toy-card-fullpage/_toy-card-fullpage.scss
@@ -487,17 +487,21 @@
 
 // photogallery wrapper
 #white-background.card-fullpage-w-bg-modified {
-  height: 51.9rem;
-  width: 100%;
-  padding: 0;
+  height: 64.9rem;
+  padding: 5rem 0 0 0;
   margin-bottom: 6.4rem;
+  &.books-slider {
+    height: 84.9rem;
+  }
 }
 
 #yellow-moving-block.card-fullpage-w-bg-modified {
   height: 51.9rem;
   padding: 0;
   margin: 0;
-  width: 100%;
+  &.books-slider {
+    height: 65.9rem;
+  }
 }
 
 #white-background {
